[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/settings.gd" type="Script" id=1]
[ext_resource path="res://obj/font/spaceAge/space age.ttf" type="DynamicFontData" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("layer/blur:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("layer/blur:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("layer/glow:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 392, 232 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("layer/sound:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 392, 288 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:mouse_filter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("layer/exit:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 808, 544 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "setting"
tracks/0/type = "value"
tracks/0/path = NodePath("layer/blur:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("layer/blur:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("layer/glow:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.15, 0.15 ),
"update": 0,
"values": [ Vector2( 392, 600 ), Vector2( 392, 232 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("layer/sound:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 0.15, 0.15 ),
"update": 0,
"values": [ Vector2( 392, 600 ), Vector2( 392, 288 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:mouse_filter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.79397e-07, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("layer/exit:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 0.15, 0.15 ),
"update": 0,
"values": [ Vector2( 808, 600 ), Vector2( 808, 544 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -496, -40 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="player" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_process_mode = 0
anims/RESET = SubResource( 2 )
anims/setting = SubResource( 3 )

[node name="layer" type="CanvasLayer" parent="."]
layer = 99

[node name="blur" type="ColorRect" parent="layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 512.0
margin_top = 300.0
margin_right = 511.997
margin_bottom = 300.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 0.882353 )

[node name="glow" type="CheckBox" parent="layer"]
pause_mode = 2
self_modulate = Color( 2, 2, 2, 1 )
margin_left = 392.0
margin_top = 600.0
margin_right = 614.0
margin_bottom = 656.0
custom_colors/font_color_hover_pressed = Color( 0, 0.741176, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.0862745, 1 )
custom_constants/hseparation = 15
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
pressed = true
text = "GLOW"

[node name="sound" type="CheckBox" parent="layer"]
self_modulate = Color( 2, 2, 2, 1 )
margin_left = 392.0
margin_top = 600.0
margin_right = 655.0
margin_bottom = 656.0
custom_constants/hseparation = 15
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 9 )
disabled = true
text = "sound"

[node name="exit" type="Button" parent="layer"]
pause_mode = 2
margin_left = 808.0
margin_top = 600.0
margin_right = 1022.0
margin_bottom = 654.0
custom_colors/font_color_hover = Color( 1, 0.772549, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "exit"
flat = true

[connection signal="toggled" from="layer/glow" to="." method="_on_glow_toggled"]
[connection signal="toggled" from="layer/sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="layer/exit" to="." method="_on_exit_pressed"]
